--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,39 @@
 .App {
+  background-color: #282c34;
   text-align: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
 }
 
+label {
+  display: block;
+}
+input {
+  width: 100%;
+  padding: 8px;
+  outline: 0;
+}
+.btn {
+  background-color: transparent;
+  outline: 0;
+  padding: 5px 20px;
+  border: 1px solid #61dafb;
+  color: #61dafb;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #61dafb;
+  color: #fff;
+}
+
+.tableDiv {
+  color: #fff;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -13,19 +45,13 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
+}
+
+.formHolder {
+  width: 50%;
+  text-align: left;
 }
 
 @keyframes App-logo-spin {
